--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -4,7 +4,25 @@
 }
 
 .product-image:hover {
-  transform: scale(1.01);
+  opacity: 1;
+  -webkit-animation: flash 1.5s;
+  animation: flash 1.5s;
+}
+@-webkit-keyframes flash {
+  0% {
+    opacity: 0.8;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes flash {
+  0% {
+    opacity: 0.8;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 .header {
@@ -14,6 +32,11 @@
 }
 
 .sub-header {
-  font-weight: 500;
+  font-weight: 600;
   letter-spacing: 2px;
+}
+
+.caption {
+  font-weight: 500;
+  font-family: "Roboto", sans-serif;
 }
